--- a/package.json
+++ b/package.json
@@ -1,46 +1,53 @@
 {
   "name": "tree-sitter-systemrdl",
-  "version": "0.8.0",
-  "description": "SystemRDL grammar for tree-sitter",
-  "main": "bindings/node",
-  "scripts": {
-    "gen": "tree-sitter generate",
-    "install": "node bin/install.js",
-    "prepare": "node bin/install.js",
-    "test": "tree-sitter test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SystemRDL/tree-sitter-systemrdl.git"
-  },
-  "author": "Aliaksei Chapyzhenka",
+  "version": "0.1.0",
+  "description": "System RDL 2.0 Grammar for tree-sitter",
+  "repository": "git+https://github.com/systemrdl/tree-sitter-systemrdl.git",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SystemRDL/tree-sitter-systemrdl/issues"
+  "author": {
+    "name": "Aliaksei Chapyzhenka"
   },
-  "homepage": "https://github.com/SystemRDL/tree-sitter-systemrdl#readme",
-  "files": [
-    "bin",
-    "grammar.js",
-    "binding.gyp",
-    "src",
-    "bindings"
-  ],
+  "funding": {
+    "url": "https://paypal.me/wavedrom"
+  },
+  "main": "bindings/node",
+  "types": "bindings/node",
   "keywords": [
-    "parser",
+    "incremental",
+    "parsing",
     "tree-sitter",
-    "verilog"
+    "systemrdl"
+  ],
+  "files": [
+    "grammar.js",
+    "tree-sitter.json",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**",
+    "*.wasm"
   ],
   "dependencies": {
-    "nan": "^2.14.2"
+    "node-addon-api": "^8.3.1",
+    "node-gyp-build": "^4.8.4"
   },
   "devDependencies": {
-    "@drom/eslint-config": "^0.12.0",
-    "eslint": "^8.56.0",
-    "node-addon-api": "^8.0.0",
-    "tree-sitter-cli": "^0.22.6"
+    "prebuildify": "^6.0.1",
+    "tree-sitter-cli": "^0.25.8"
   },
-  "eslintConfig": {
-    "extends": "@drom/eslint-config/eslint8/node12"
+  "peerDependencies": {
+    "tree-sitter": "^0.25.8"
+  },
+  "peerDependenciesMeta": {
+    "tree-sitter": {
+      "optional": true
+    }
+  },
+  "scripts": {
+    "install": "node-gyp-build",
+    "prestart": "tree-sitter build --wasm",
+    "start": "tree-sitter playground",
+    "test": "node --test bindings/node/*_test.js"
   }
 }
